[package]
name = "httpwg"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/loona"
documentation = "https://docs.rs/httpwg"
readme = "README.md"
description = """
Test cases for RFC 9113 (HTTP/2)
"""
rust-version = "1.75"

[dependencies]
bytes = "1.7.1"
enumflags2 = "0.7.10"
eyre = "0.6.12"
buffet = { version = "0.2.0", path = "../buffet" }
loona-h2 = { version = "0.2.0", path = "../loona-h2" }
loona-hpack = { version = "0.3.1", path = "../loona-hpack" }
futures-util = "0.3.30"
pretty-hex = "0.4.1"
tokio = { version = "1.39.2", features = ["time"] }
tracing = "0.1.40"
