[package]
name = "loona-h2"
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/loona"
documentation = "https://docs.rs/loona-h2"
readme = "README.md"
description = """
HTTP/2 parser and base types
"""
rust-version = "1.75"

[dependencies]
enumflags2 = "0.7.10"
nom = { version = "7.1.3", default-features = false }
buffet = { version = "0.3.3", path = "../buffet" }
thiserror = "1.0.63"
byteorder = "1.5.0"
tracing = "0.1.40"
