[package]
name = "loona"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["http", "http1", "http2", "io-uring", "loona"]
repository = "https://github.com/bearcove/loona"
documentation = "https://docs.rs/loona"
readme = "README.md"
description = """
HTTP 1 and 2 on top of io_uring
"""
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["uring"]
uring = ["buffet/uring"]

[[bench]]
name = "encoding"
harness = false

[dependencies]
byteorder = "1.5.0"
eyre = { version = "0.6.12", default-features = false }
futures-util = "0.3.30"
buffet = { version = "0.2.0", path = "../buffet" }
loona-hpack = { version = "0.3.1", path = "../loona-hpack" }
http = "1.1.0"
memchr = "2.7.4"
nom = { version = "7.1.3", default-features = false }
pretty-hex = { version = "0.4.1", default-features = false }
smallvec = { version = "1.13.2", default-features = false, features = [
    "const_generics",
    "const_new",
    "union",
] }
thiserror = { version = "1.0.63", default-features = false }
tokio = { version = "1.39.2", features = ["macros", "sync"] }
tracing = { version = "0.1.40", default-features = false }
loona-h2 = { version = "0.2.0", path = "../loona-h2" }

[dev-dependencies]
buffet = { version = "0.2.0", path = "../buffet" }
bytes = { version = "1.7.1", default-features = false }
pretty_assertions = { version = "1.4.0", default-features = false, features = [
    "std",
] }
tokio-stream = { version = "0.1.15", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "std",
    "fmt",
    "ansi",
    "env-filter",
] }
httparse = { version = "1.9.4", default-features = false, features = ["std"] }
tokio = { version = "1.39.2", default-features = false, features = [
    "io-util",
    "process",
    "time",
] }
futures-util = { version = "0.3.30", default-features = false, features = [
    "std",
] }
libc = "0.2.155"
httpwg = { path = "../httpwg" }
color-eyre = "0.6.3"
httpwg-macros = { version = "0.2.0", path = "../httpwg-macros" }
cargo-husky = { version = "1", features = ["user-hooks"] }
criterion = "0.5.1"
codspeed-criterion-compat = "2.6.0"
itoa = "1.0.11"
rcgen = "0.13.1"
rustls = "0.22.4"
socket2 = "0.5.7"
tokio-rustls = "0.25.0"

[target.'cfg(target_os = "linux")'.dev-dependencies]
ktls = "5.0.0"
